feat: modifie style.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <!-- <p id="answer">Merhaba</p> -->
         <marquee id="answer" behavior="alternate" direction="right"></marquee>
-        <marquee id="answer2" behavior="alternate" direction="left"></marquee>
+        <marquee id="hello" behavior="alternate" direction="left"></marquee>
     </div>
 
     <script src="script.js"></script>
